rabbit/manifests/ingress.yaml
# We need to access rabbitmq GUI from outside of our cluster. Thus, we need to set up an ingress for GUI.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
    - host: rabbitmq-manager.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
